--- a/templates/home.html
+++ b/templates/home.html
@@ -66,19 +66,23 @@
               <th scope="col">Original Poster</th>
             </tr>
           </thead>
+          <form action="" method="POST">
           <tbody>
             {% set count = namespace(value=0) %}
             {% for row in result %}
             {% set count.value = count.value + 1 %}
-            
             <tr>
               <td scope="row">{{count.value}}</td>
               <td>{{row[0]}}</td>
               <td>{{foodcounts[count.value-1]}}</td>
               <td>{{creator[count.value-1][0][0]}}</td>
+
+
+              <td><button name='recipe' value='{{row[0]}}+{{count.value-1}}' type="submit" class="btn btn-primary">Select</button></td>
             </tr>
             {% endfor %}
           </tbody>
+          </form>
         </table>
       </div>
     
